syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "PX.Crop.GrpcApi";

package crop;

// The greeting service definition.
service CropServices {
  // Sends a greeting
  rpc GetAllActiveCrops (Request) returns (Response);
}

// The request message containing the user's name.
message Request {
  string userName = 1;
}

// The response message containing the greetings.

message getactivecropviewmodel{
	string integrationId = 1;
    string name = 2;
    string description = 3;
    google.protobuf.Timestamp startPeriod = 4;
    google.protobuf.Timestamp endPeriod = 5;
    google.protobuf.Timestamp startPlanningPeriod = 6;
    google.protobuf.Timestamp endPlanningPeriod = 7;
    bool isGoalPlanningValued = 9;
}

message Response {
  repeated getactivecropviewmodel crops = 1;
}
